include  mysql connectionString

--- a/ManagerProduct.WebUI/appsettings.json
+++ b/ManagerProduct.WebUI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "MySqlConnection": {
+    "MySqlConnectionString": "Server=mysqlserver;DataBase=ManagerProductDb;Uid=root;Pwd=123;SslMode=None;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
