--- a/ManagerProduct.WebUI/appsettings.json
+++ b/ManagerProduct.WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySqlConnection": {
-    "MySqlConnectionString": "Server=mysqlserver;DataBase=ManagerProductDb;Uid=root;Pwd=123;SslMode=None;"
+    "MySqlConnectionString": "Server=localhost;DataBase=ManagerProductDb;Uid=root;Pwd=123;SslMode=None;"
   },
   "Logging": {
     "LogLevel": {
