--- a/ManagerProduct.Infra.Data/ManagerProduct.Infra.Data.csproj
+++ b/ManagerProduct.Infra.Data/ManagerProduct.Infra.Data.csproj
@@ -12,13 +12,13 @@
 
 
 <ItemGroup>
-  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
+  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2">
   <PrivateAssets>all</PrivateAssets>
   <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
 </PackageReference>
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
-    <PrivateAssets>all</PrivateAssets>
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
+    <PrivateAssets>none</PrivateAssets>
     <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
   </PackageReference>
 </ItemGroup>
